Fix caption overflow. Breaks at word now

--- a/src/components/ProfileCard.less
+++ b/src/components/ProfileCard.less
@@ -31,7 +31,8 @@
 
 .caption {
   display: block;
-  overflow: auto;
   font-size: 0.9em;
   padding-top: 1em;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
